# ml-learning-journey

./: .gitignore  README.md  eslint.config.mjs  mdx-components.tsx  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: deploy-pages.yml  quality.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/dashboard/: page.tsx
app/projects/: page.tsx
components/: dashboard.tsx  github-panel.tsx  guided-solution.tsx  header.tsx  icons.tsx  project-detail.tsx  project-explorer.tsx  project-mathematics.tsx  project-reading.tsx  providers.tsx  roadmap.tsx  stat-pill.tsx
components/ui/: button.tsx
components/walkthrough/: concept-diagram.tsx  theme-toggle.tsx  walkthrough-index.tsx  walkthrough-navbar.tsx  walkthrough-sidebar.tsx  walkthrough-step.tsx
implementations/a-b-testing-causal-inference-toolkit/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/a-b-testing-causal-inference-toolkit/src/causal_toolkit/: cli.py  core.py
implementations/a-b-testing-causal-inference-toolkit/tests/: test_core.py
implementations/alphazero-on-connect-4-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/attention-is-all-you-need-build-the-transformer-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/build-a-mini-llm-inference-server/: README.md  pyproject.toml  tutorial.ipynb
implementations/build-a-retrieval-augmented-generation-pipeline-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/build-a-trainable-cnn-from-scratch-in-numpy/: README.md  pyproject.toml  tutorial.ipynb
implementations/build-an-mlp-in-jax-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/build-your-own-teenygrad-a-tiny-tensor-autograd-engine/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/diloco-distributed-low-communication-training-of-language-models/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/diloco-distributed-low-communication-training-of-language-models/src/diloco/: cli.py  core.py
implementations/diloco-distributed-low-communication-training-of-language-models/tests/: test_core.py
implementations/direct-preference-optimization-dpo-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/federated-averaging-fedavg-from-scratch-in-pytorch/: README.md  pyproject.toml  tutorial.ipynb
implementations/flash-attention-in-cuda-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/fused-llm-inference-kernels-in-cuda/: README.md  pyproject.toml  tutorial.ipynb
implementations/lora-fine-tune-a-tiny-chat-model-with-unsloth/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/lora-fine-tune-a-tiny-chat-model-with-unsloth/src/lora_tune/: cli.py  core.py
implementations/lora-fine-tune-a-tiny-chat-model-with-unsloth/tests/: test_core.py
implementations/market-making-betting-game-simulator/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/market-making-betting-game-simulator/src/market_sim/: cli.py  core.py
implementations/market-making-betting-game-simulator/tests/: test_core.py
implementations/mini-distributed-training-and-memory-constrained-trainer-from-sc/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/mini-distributed-training-and-memory-constrained-trainer-from-sc/src/memory_trainer/: cli.py  core.py
implementations/mini-distributed-training-and-memory-constrained-trainer-from-sc/tests/: test_core.py
implementations/multimodal-autoregressive-image-generator-from-scratch-in-jax/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/multimodal-autoregressive-image-generator-from-scratch-in-jax/src/image_gen/: cli.py  core.py
implementations/multimodal-autoregressive-image-generator-from-scratch-in-jax/tests/: test_core.py
implementations/q-learning-on-frozenlake-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/random-forest-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/reinforcement-learning-for-tic-tac-toe-from-minimax-to-dqn/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/reinforcement-learning-for-tic-tac-toe-from-minimax-to-dqn/src/tictactoe_rl/: cli.py  core.py
implementations/reinforcement-learning-for-tic-tac-toe-from-minimax-to-dqn/tests/: test_core.py
implementations/rlhf-from-scratch-on-distilgpt2/: README.md  pyproject.toml  tutorial.ipynb
implementations/support-vector-machine-from-scratch/: README.md  pyproject.toml  tutorial.ipynb
implementations/tiny-gpt-from-scratch/: README.md  config.json  (+2 more)
implementations/trainable-mixture-of-experts-in-cuda/: README.md  config.json  pyproject.toml  tutorial.ipynb
implementations/trainable-mixture-of-experts-in-cuda/src/moe/: cli.py  core.py
implementations/trainable-mixture-of-experts-in-cuda/tests/: test_core.py
lib/: deep-article.ts  guides.ts  progress.ts  project-math.ts  project-outlines.generated.json  projects.ts  research.generated.json  walkthroughs.ts
scripts/: generate-project-artwork.mjs  sync-deepml-outlines.mjs  verify-content.mjs
(+53 files in other folders)
