[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-journey-causal-toolkit"
version = "0.1.0"
description = 'Statistical primitives for powered proportion experiments, confidence intervals, multiplicity, difference-in-differences, and synthetic controls.'
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "nbclient>=0.10", "ipykernel>=6"]

[project.scripts]
causal-toolkit = "causal_toolkit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
