[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-journey-diloco"
version = "0.1.0"
description = 'A deterministic NumPy reference for local inner optimization, pseudo-gradient aggregation, and momentum outer updates.'
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "nbclient>=0.10", "ipykernel>=6"]

[project.scripts]
diloco = "diloco.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
