[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-journey-market-sim"
version = "0.1.0"
description = 'Expected-value, fractional-Kelly, inventory-aware quoting, stochastic fills, and risk-adjusted evaluation in a seeded simulator.'
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "nbclient>=0.10", "ipykernel>=6"]

[project.scripts]
market-sim = "market_sim.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
