[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-journey-memory-trainer"
version = "0.1.0"
description = 'Gradient accumulation, activation recomputation, mixed precision, simulated all-reduce, and ZeRO-style state partitioning.'
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "nbclient>=0.10", "ipykernel>=6"]

[project.scripts]
memory-trainer = "memory_trainer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
