[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-journey-image-gen"
version = "0.1.0"
description = 'A lightweight discrete image tokenizer and text-conditioned autoregressive code model with reproducible sampling and evaluation.'
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "nbclient>=0.10", "ipykernel>=6"]

[project.scripts]
image-gen = "image_gen.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
