[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-journey-tictactoe-rl"
version = "0.1.0"
description = 'A complete game engine, exact minimax oracle, replay-based NumPy DQN, legal-action masking, self-play data, and oracle evaluation.'
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8", "nbclient>=0.10", "ipykernel>=6"]

[project.scripts]
tictactoe-rl = "tictactoe_rl.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
